c2prj1_cards/grade.txt
Grading at Sat Aug  3 07:03:47 UTC 2019
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:147:1: error: ISO C forbids nested functions [-Werror=pedantic]
 card_t card_from_num(unsigned c) {
 ^
cards.c:161:1: error: expected declaration or statement at end of input
 }
 ^
cards.c:161:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
